--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.23",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
