--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "react": "^18.0.0",
