--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "antd": "^4.20.0",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.6",
